# somenergia-poetry-docker-workshop

./: .gitignore  .marprc.yml  404.html  CHANGELOG.md  Makefile  README.md  docker-compose.mkdocs.yml  docker-compose.part-2.yml  docker-compose.part-3.yml  docker-compose.pypi-local.yml  example.env  index.html  mkdocs.yml
.github/: deploy-mkdocs.yml  release-marp-slides.yml
.github/workflows/: deploy-mkdocs.yml
docs/: index.md  part-1.md  part-2.md  part-3.md  part-4.md
docs/part-1/: instructions.md
docs/part-2/: instructions.md
part-1/instructions/: index.html
part-2/instructions/: index.html
search/: search_index.json
services/mkdocs/: Dockerfile
services/part-1/: cli.py  pyproject.toml
services/part-2/: README.md  pyproject.toml
services/part-2/baby-steps/: Dockerfile
services/part-2/python-poetry/: Dockerfile
services/part-3/: pyproject.toml
services/part-3/basic-python/: Dockerfile
services/part-3/python-poetry/: pyproject.toml
services/pypi/data/auth/: .htpasswd
slides/: dependency-and-packaging-slides.md
