[tool.poetry]
name = "greeter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@mail.co>"]
readme = "README.md"
packages = [
    { include = "greeter", from = "src" },
]

[tool.poetry.scripts]
greeter-cli = "greeter.cli:cli" # new

[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"